--- a/01.Unit-Testing/02.Test-Driven-Development/Poker.Tests/Poker.Tests.csproj
+++ b/01.Unit-Testing/02.Test-Driven-Development/Poker.Tests/Poker.Tests.csproj
@@ -55,6 +55,12 @@
     <Compile Include="PokerHandsCheckerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Poker\Poker.csproj">
+      <Project>{28fe6ba3-4622-406e-81c4-419b0d2368f9}</Project>
+      <Name>Poker</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
