--- a/02.High-Quality-Code-Part-1/04.Variables-Data-Expressions-and-Constants/02.MethodPrintStatisticsInCSharp/02.MethodPrintStatisticsInCSharp.csproj
+++ b/02.High-Quality-Code-Part-1/04.Variables-Data-Expressions-and-Constants/02.MethodPrintStatisticsInCSharp/02.MethodPrintStatisticsInCSharp.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IPrinter.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatisticsPrinter.cs" />
